codigo de js para el burguer-menu y arreglo de bugs en version IOS

--- a/curriculum/css/estilos.css
+++ b/curriculum/css/estilos.css
@@ -327,13 +327,26 @@ h2 {
 .burguer-button {
   width: 40px;
   height: 40px;
-  /* font-size: 40px; */
+  font-size: 20px;
   border-radius: 50%;
-  background-color: black;
-  display: block;
+  background-color: rgba(0, 0, 0, .8);
+  display: none;
+  line-height: 40px;
+  text-align: center;
+  position: fixed;
+  z-index: 4;
+  left: 5px;
+  top: 5px;
+  color: white;
+
 }
 
 @media screen and (max-width: 1024px){
+  .portfolio{
+    padding: 0;
+  }
+  
+  
   .container {
     padding: 0 1em;
   }
@@ -388,7 +401,9 @@ h2 {
   }
 }
 @media screen and (max-width: 767px){
-  
+  .burguer-button{
+    display: block;
+  }
   
   .header {
     display: block;
@@ -405,10 +420,32 @@ h2 {
 
   .header a {
     justify-content: center;
+    height: 4px;
+    font-size: 2em;
+    text-decoration: underline;
+    margin-bottom: .5em;
   }
 
   .header .logo {
     text-align: center;
+  }
+
+  .menu {
+    position: fixed;
+    background: rgba(5, 111, 255, .9);
+    z-index: 3;
+    top: 0;
+    left: -100vw;
+    width: 100vw;
+    /*height: 100vh;  */
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+  }
+  .menu.is-active{
+    left: 0;
   }
 
   .project {display: block;}
@@ -449,7 +486,7 @@ h2 {
 
   }
   .project-description{
-    font-size: .8em;
+    font-size: 1em;
   }
 
   .event {
